--- a/variables.yml
+++ b/variables.yml
@@ -1,6 +1,6 @@
-CONTROLLER_HOST     = "https://grace202204060639255.saas.appdynamics.com"
-CONTROLLER_PORT     = "443"
-ACCOUNT_NAME        = "grace202204060639255"
-MACHINE_PATH        = "bit-lab"
-ACCOUNT_ACCESS_KEY  = "zh3ydjxp28m5"
-APPD_BEARER_TOKEN = "bf9a4986-b83a-4852-a24f-bd9f43e5ef20"
+CONTROLLER_HOST: "https://grace202204060639255.saas.appdynamics.com"
+CONTROLLER_PORT: "443"
+ACCOUNT_NAME   : "grace202204060639255"
+MACHINE_PATH   : "bit-lab"
+ACCOUNT_ACCESS_KEY  : "zh3ydjxp28m5"
+APPD_BEARER_TOKEN : "bf9a4986-b83a-4852-a24f-bd9f43e5ef20"
