--- a/main.yml
+++ b/main.yml
@@ -10,6 +10,7 @@
 
 - name: Install and manage one or more Apache Web Server(s)
   hosts: all
+  debugger: never
   become: yes
   tasks:
     - name: Include group variables
@@ -29,5 +30,6 @@
       tags:
         - install_apache
     - name: Install the AppDynamics Machine agent
+      debugger: on_failed
       include_role:
         name: appd-machine-agent
