--- a/roles/appd-machine-agent/tasks/main.yml
+++ b/roles/appd-machine-agent/tasks/main.yml
@@ -8,7 +8,7 @@
   get_url:
     url: "https://download.appdynamics.com/download/prox/download-file/machine/22.3.0.3296/appdynamics-machine-agent-22.3.0.3296.x86_64.rpm"
     #dest: /home/delgadm/appdynamics-machine-agent-21.5.0.3130.x86_64.rpm
-    dest: /home/
+    dest: /home/appdynamics-machine-agent-22.3.0.3296.x86_64.rpm
     mode: 0644
     force_basic_auth: yes
     headers: {Authorization: "{{ APPD_BEARER_TOKEN }}" }
