--- a/roles/appd-machine-agent/tasks/main.yml
+++ b/roles/appd-machine-agent/tasks/main.yml
@@ -9,13 +9,14 @@
     url: "https://download.appdynamics.com/download/prox/download-file/machine/22.3.0.3296/appdynamics-machine-agent-22.3.0.3296.x86_64.rpm"
     #dest: /home/delgadm/appdynamics-machine-agent-21.5.0.3130.x86_64.rpm
     dest: /home/appdynamics-machine-agent-22.3.0.3296.x86_64.rpm
-    mode: 0644
+    mode: 0744
     force_basic_auth: yes
     headers: {Authorization: "{{ APPD_BEARER_TOKEN }}" }
+    checksum: sha512:ba13f412038b13cded96ddbfb11eefa41174a5a8efb565e61cd5fc5d61bdcd8de0e09f96b2c423f377c9c772309a4d6be422f7d392ac2c29bc5b63a4b75f7a63
 
 - name: Install the AppDynamics machine agent 
   yum:
-    name: /home/appdynamics-machine-agent-21.5.0.3130.x86_64.rpm
+    name: /home/appdynamics-machine-agent-22.3.0.3296.x86_64.rpm
     state: present
     disable_gpg_check: yes
 
