--- a/variables.yml
+++ b/variables.yml
@@ -1,4 +1,4 @@
-CONTROLLER_HOST: "https://grace202204060639255.saas.appdynamics.com"
+CONTROLLER_HOST: "grace202204060639255.saas.appdynamics.com"
 CONTROLLER_PORT: "443"
 ACCOUNT_NAME   : "grace202204060639255"
 MACHINE_PATH   : "bit-lab|"
